--- a/1.邂逅前端开发.md
+++ b/1.邂逅前端开发.md
@@ -6,7 +6,7 @@
 - 打开浏览器查看到的页面，是网络中的'一页'
 - 网页的内容可以非常丰富，包括文字，链接，图片，音乐，视频等等
 
-<img src="assets/assets/1.邂逅前端开发.assets/image-20231109224521588.png" alt="image-20231109224521588" style="zoom: 25%;" />
+<img src="assets/1.邂逅前端开发.assets/image-20231109224521588.png" alt="image-20231109224521588" style="zoom: 25%;" />
 
 
 
