--- a/10.CSS的属性继承.md
+++ b/10.CSS的属性继承.md
@@ -235,7 +235,7 @@ img元素是**行内级元素**，它还是一个**可替换元素**，也就是
 
 官方文档说他是行内替换级元素，并没有说它是一个行内块级元素
 
-所以严谨一点来说，**行内不可替换级元素不能设置宽高**，例如input、vedio元素等，这些都是**行内级可替换元素**，他们都是可以设置宽高的，但是像span他是行**内不可替换级元素**是不可以设置宽高的
+所以严谨一点来说，**行内可替换级元素可以设置宽高**，例如input、vedio元素等，这些都是**行内级可替换元素**，他们都是可以设置宽高的，但是像span他是行**内不可替换级元素**是不可以设置宽高的，例如span,i
 
 
 
