--- a/11.CSS盒子模型.md
+++ b/11.CSS盒子模型.md
@@ -68,7 +68,7 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 
 因为盒子有四边, 所以**margin/padding/border**都包括**top/right/bottom/left**四个边:
 
-<img src="assets/11.CSS盒子模型.assets/image-20231117133021339.png" alt="image-20231117133021339" style="zoom: 33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231117133021339.png" alt="image-20231117133021339" style="zoom: 25%;" />
 
 
 
@@ -80,7 +80,7 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 
 ### 在浏览器的开发工具中
 
-![image-20231117133057915](assets/11.CSS盒子模型.assets/image-20231117133057915.png)
+<img src="assets/11.CSS盒子模型.assets/image-20231117133057915.png" alt="image-20231117133057915" style="zoom: 25%;" />
 
 
 
@@ -95,6 +95,8 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 
 注意: 对于**行内级非替换元素**来说, 设置宽高是**无效的**!
 
+> [`min-width`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/min-width) 和 [`max-width`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/max-width) 属性的优先级高于 [`width`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/width)。
+
 
 
 #### 块级元素
@@ -102,6 +104,7 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 宽度在不设置的时候，默认为：`width: auto`
 
 - 自动的，就表示当前没有强制性告诉浏览器具体的值是多少
+- 浏览器将会为指定的元素计算并选择一个宽度。
 - 所以这个宽度就交给**浏览器来显示**的，**浏览器默认宽度是窗口的宽度**
 
 
@@ -140,7 +143,7 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 - min-height：**最小高度**，无论内容多少，高度都大于或等于min-height 
 - max-height：**最大高度**，无论内容多少，高度都小于或等于max-height
 
-
+min-width和min-height，max-width和max-width，这两个的优先级大于width和height
 
 
 
@@ -294,7 +297,7 @@ border-radius事实上**是一个缩写属性**:
 
 这个的时候的盒子的四个角可能有些怪异...
 
-<img src="11.CSS盒子模型.assets/image-20231122205806806.png" alt="image-20231122205806806" style="zoom:33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122205806806.png" alt="image-20231122205806806" style="zoom:33%;" />
 
 
 
@@ -336,7 +339,7 @@ margin也并非必须是四个值, 也可以有其他值;
 
 ![image-20231118125735114](assets/11.CSS盒子模型.assets/image-20231118125735114.png)
 
-
+ 
 
 
 
@@ -360,7 +363,7 @@ margin-top传递
 }
 ```
 
-<img src="11.CSS盒子模型.assets/image-20231122210418107.png" alt="image-20231122210418107" style="zoom:33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122210418107.png" alt="image-20231122210418107" style="zoom:33%;" />
 
 可以发现会把父元素（外层盒子）拉下来，
 
@@ -376,7 +379,7 @@ margin-top传递
 }
 ```
 
-<img src="11.CSS盒子模型.assets/image-20231122210510384.png" alt="image-20231122210510384" style="zoom:33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122210510384.png" alt="image-20231122210510384" style="zoom:33%;" />
 
 
 
@@ -451,7 +454,7 @@ margin-top传递
      </body>
 ```
 
-<img src="11.CSS盒子模型.assets/image-20231122211355185.png" alt="image-20231122211355185" style="zoom: 33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122211355185.png" alt="image-20231122211355185" style="zoom: 33%;" />
 
 1. 父元素的高度设置的是auto，所以父元素的高度就是内容的高度
 2. 子元素设置了下margin，但是它没有撑起来父元素，而是将下margin传递给了父元素，让父元素具备下margin
@@ -503,7 +506,7 @@ margin-top传递
 
 - 只设置其中一个元素的margin
 
-  ![image-20231118125945093](11.CSS盒子模型.assets/image-20231118125945093.png)
+  ![image-20231118125945093](../assets/11.CSS盒子模型/image-20231118125945093.png)
 
 
 
@@ -511,7 +514,7 @@ margin-top传递
 
 > TIP：默认情况下，浏览器会给body增加8px的margin
 >
-> <img src="11.CSS盒子模型.assets/image-20231118163335476.png" alt="image-20231118163335476" style="zoom: 50%;" />
+> <img src="assets/11.CSS盒子模型.assets/image-20231118163335476.png" alt="image-20231118163335476" style="zoom: 50%;" />
 >
 > 
 >
@@ -548,7 +551,7 @@ outline相关属性有
 
 - 去除a元素、input元素的focus轮廓效果
 
-<img src="11.CSS盒子模型.assets/image-20231122220526911.png" alt="image-20231122220526911" style="zoom: 50%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122220526911.png" alt="image-20231122220526911" style="zoom: 50%;" />
 
 
 
@@ -615,7 +618,7 @@ box-shadow属性可以**设置一个或者多个阴影**
       }
 ```
 
-<img src="11.CSS盒子模型.assets/image-20231122225850290.png" alt="image-20231122225850290" style="zoom: 33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122225850290.png" alt="image-20231122225850290" style="zoom: 33%;" />
 
 
 
@@ -666,7 +669,7 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
       }
 ```
 
-<img src="11.CSS盒子模型.assets/image-20231122230312074.png" alt="image-20231122230312074" style="zoom:33%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122230312074.png" alt="image-20231122230312074" style="zoom:33%;" />
 
 
 
@@ -698,10 +701,10 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 #### 行内级非替换元素：上下padding
 
-![image-20231122231224586](11.CSS盒子模型.assets/image-20231122231224586.png)
+![image-20231122231224586](assets/11.CSS盒子模型/image-20231122231224586.png)
 
 - 可以发现给行内级非替换元素设置了padding，但是显示是异常的
-- 这里主要异常的是padding-top、padding-bottom
+- 这里主要异常的是padding-top、padding-bottom，
 - 它们都不占空间，因为bbb是块级元素，它跑到了padding中就证明了这部分没有占空间，让bbb跑上去了
 
 
@@ -710,7 +713,7 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 #### 行内级非替换元素：上下border
 
-<img src="11.CSS盒子模型.assets/image-20231122231506001.png" alt="image-20231122231506001" style="zoom: 50%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122231506001.png" alt="image-20231122231506001" style="zoom: 50%;" />
 
 
 
@@ -718,7 +721,7 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 #### 行内级非替换元素：上下margin
 
-<img src="11.CSS盒子模型.assets/image-20231122231642644.png" alt="image-20231122231642644" style="zoom: 50%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122231642644.png" alt="image-20231122231642644" style="zoom: 50%;" />
 
 
 
@@ -732,17 +735,23 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 > 背景色有没有设置到border后面（有）
 >
-> 背景色会在border没有设置颜色的情况下，会使用color设置的颜色
+> 这里的border是透明色，所以可以下面的背景色是蓝色
 >
 > ```css
 >       .box {
 >         background-color: #f00;
 >         color: blue;
->         border: 30px solid;
+>         border: 30px solid transparent;
 >       }
 > ```
 >
-> <img src="11.CSS盒子模型.assets/image-20231122232000851.png" alt="image-20231122232000851" style="zoom: 67%;" />
+> ![image-20231204214230163](assets/11.CSS盒子模型/image-20231204214230163.png)
+>
+> 背景色会在border没有设置颜色的情况下，会使用color设置的颜色
+>
+> <img src="assets/11.CSS盒子模型/image-20231204214321346.png" alt="image-20231204214321346" style="zoom: 50%;" />
+
+
 
 
 
@@ -762,7 +771,9 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 box-sizing用来**设置盒子模型中宽高的行为** 
 
-content-box 
+
+
+#### content-box
 
 - padding、border都布置在width、height外边 
 - width = content.width + padding + border
@@ -783,7 +794,7 @@ content-box
 
 所以这个盒子的总宽度是`130px`，但是可能和我们想的不一样，因为我们设置的宽度为100
 
-<img src="11.CSS盒子模型.assets/image-20231122232727066.png" alt="image-20231122232727066" style="zoom:67%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122232727066.png" alt="image-20231122232727066" style="zoom: 50%;" />
 
 
 
@@ -795,7 +806,9 @@ content-box
 
 
 
-border-box 
+
+
+#### border-box
 
 - padding、border都布置在width、height里边
 
@@ -803,9 +816,9 @@ border-box
 
 所以这个盒子的总宽度是`100px`
 
-<img src="11.CSS盒子模型.assets/image-20231122233057408.png" alt="image-20231122233057408" style="zoom:67%;" />
+<img src="assets/11.CSS盒子模型.assets/image-20231122233057408.png" alt="image-20231122233057408" style="zoom: 50%;" />
 
-设置为`border-box`后，width设置的值就是整个盒子的值，它会自动压缩content的宽度
+设置为`border-box`后，width设置的值就是整个盒子的值，它会**自动压缩content的宽度**
 
 
 
@@ -874,7 +887,7 @@ IE盒子模型（IE8以下浏览器）
 
 > 前面说行内级元素只能包含行内级元素，这个是标准，但是
 >
-> ![image-20231118223827922](11.CSS盒子模型.assets/image-20231118223827922.png)
+> ![image-20231118223827922](assets/11.CSS盒子模型/image-20231118223827922.png)
 >
 > 这里是有给a元素设置`display: inline-block`，因为我们一般都会给a元素设置宽高的
 
@@ -890,7 +903,6 @@ IE盒子模型（IE8以下浏览器）
 > <img referrerpolicy="no-referrer">
 > ```
 >
-> 
 
 
 
