--- a/12.CSS设置背景.md
+++ b/12.CSS设置背景.md
@@ -69,7 +69,7 @@ background-size用于**设置背景图片的大小**
 
 
 
-### background-position                                                bnh
+### background-position
 
 background-position用于**设置背景图片在水平、垂直方向上的具体位置**
 
