--- a/15.结构伪类.md
+++ b/15.结构伪类.md
@@ -103,13 +103,13 @@
 - :last-child，等同于:nth-last-child(1)
 - :first-of-type，等同于:nth-of-type(1)
 - :last-of-type，等同于:nth-last-of-type(1)
-- :only-child，是父元素中唯一的子元素
-- :only-of-type，是父元素中唯一的这种类型的子元素
+- :only-child，是父元素中唯一的子元素（给子元素添加）
+- :only-of-type，是父元素中唯一的这种类型的子元素（给子元素添加）
 
 下面的伪类偶尔会使用:
 
 - :root，根元素，就是HTML元素
-- :empty代表里面完全空白的元素
+- :empty代表里面完全空白的元素（没有子元素）
 
 
 
