--- a/8.文本属性.md
+++ b/8.文本属性.md
@@ -164,13 +164,13 @@ text-align-last: justiry;
 
 `letter-spacing: 8px`
 
-<img src="8.文本属性.assets/image-20231121223303346.png" alt="image-20231121223303346" style="zoom: 67%;" />
+<img src="assets/8.文本属性.assets/image-20231121223303346.png" alt="image-20231121223303346" style="zoom: 67%;" />
 
 
 
 `word-spacing: 8px;`
 
-![image-20231121223348039](8.文本属性.assets/image-20231121223348039.png)
+![image-20231121223348039](assets/8.文本属性/image-20231121223348039.png)
 
 
 
@@ -203,7 +203,7 @@ text-align-last: justiry;
 
   - 文**档中宽度**就**不是相当于父元素**，而是**相当于包含块**
 
-    ![image-20231121224955555](8.文本属性.assets/image-20231121224955555.png)
+    ![image-20231121224955555](assets/8.文本属性.assets/image-20231121224955555.png)
 
     **width的百分比相对于包含块**，包含块可以理解为**父元素(块级父元素)**，但是也不一定是父元素（例如定位后，包含块就不再是父元素了）
 
@@ -211,7 +211,7 @@ text-align-last: justiry;
 
   - 相对于**父元素的字体大小**，如果父元素没有字体大小，相对于**浏览器的字体大小（默认16px）**，也可以说是**继承了父元素的字体大小**。
   
-    ![image-20231121225428171](8.文本属性.assets/image-20231121225428171.png)
+    ![image-20231121225428171](assets/8.文本属性.assets/image-20231121225428171.png)
 
 
 
