--- a/9.CSS选择器.md
+++ b/9.CSS选择器.md
@@ -86,6 +86,7 @@ body, div, p {
 
 - id值如果由多个单词组成，单词之间可以用中划线-、下划线_连接，也可以使用驼峰标识 
 - 最好不要用标签名作为id值
+- 一般通用的，公共的选择器用下划线，否则用中划线
 
 **中划线又叫连字符（hyphen）**
 
@@ -443,4 +444,6 @@ a {color: red} 相当于a:link {color: red} a:visited{color: red} ...
 这种方式是在.box元素前面和后面加上文本，这种方式**不会有空格**
 
 注意：使用伪元素的过程中，**不能把content省略**，否则伪元素不会生效
+
+新增的伪元素是行内级元素，遵守行内级元素的规则
 
