--- a/11.CSS盒子模型.md
+++ b/11.CSS盒子模型.md
@@ -506,7 +506,7 @@ margin-top传递
 
 - 只设置其中一个元素的margin
 
-  ![image-20231118125945093](../assets/11.CSS盒子模型/image-20231118125945093.png)
+  ![image-20231118125945093](assets/11.CSS盒子模型.assets/image-20231118125945093.png)
 
 
 
@@ -701,7 +701,7 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 
 #### 行内级非替换元素：上下padding
 
-![image-20231122231224586](assets/11.CSS盒子模型/image-20231122231224586.png)
+![image-20231122231224586](assets/11.CSS盒子模型.assets/image-20231122231224586.png)
 
 - 可以发现给行内级非替换元素设置了padding，但是显示是异常的
 - 这里主要异常的是padding-top、padding-bottom，
@@ -745,11 +745,11 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 >       }
 > ```
 >
-> ![image-20231204214230163](assets/11.CSS盒子模型/image-20231204214230163.png)
+> ![image-20231204214230163](assets/11.CSS盒子模型.assets/image-20231204214230163.png)
 >
 > 背景色会在border没有设置颜色的情况下，会使用color设置的颜色
 >
-> <img src="assets/11.CSS盒子模型/image-20231204214321346.png" alt="image-20231204214321346" style="zoom: 50%;" />
+> <img src="assets/11.CSS盒子模型.assets/image-20231204214321346.png" alt="image-20231204214321346" style="zoom: 50%;" />
 
 
 
@@ -887,7 +887,7 @@ IE盒子模型（IE8以下浏览器）
 
 > 前面说行内级元素只能包含行内级元素，这个是标准，但是
 >
-> ![image-20231118223827922](assets/11.CSS盒子模型/image-20231118223827922.png)
+> ![image-20231118223827922](assets/11.CSS盒子模型.assets/image-20231118223827922.png)
 >
 > 这里是有给a元素设置`display: inline-block`，因为我们一般都会给a元素设置宽高的
 
