--- a/7.认识CSS.md
+++ b/7.认识CSS.md
@@ -226,7 +226,7 @@ CSS代码也可以添加注释来方便阅读：
 |                  | text-shadow：阴影设置，none \| <shadow-t>#                   |
 |                  | text-transform：大小写转换                                   |
 |                  | text-indent：缩进，段落第一行文本要空多少距离，单位为长度    |
-|                  | text-overflow：文本溢出的截断<img src="7.认识CSS.assets/image-20231121124123454.png" alt="image-20231121124123454" style="zoom: 67%;" /> |
+|                  | text-overflow：文本溢出的截断<img src="assets/7.认识CSS.assets/image-20231121124123454.png" alt="image-20231121124123454" style="zoom: 67%;" /> |
 |                  | white-space：设置如何处理元素中的 空白，长设置属性normal/nowrap |
 |                  | vertical-align: 垂直对齐方式(较复杂，听视频讲解)             |
 |                  | word-spacing：word和word之间的间距                           |
