--- a/8.文本属性.md
+++ b/8.文本属性.md
@@ -113,12 +113,12 @@ W3C中的解释:
 
 justiry只针对最后一行的上一行是有效的，也就是说最后一行不会两端对其，只有前面的行才会两端对齐
 
-所以只有一行的时候，justiry是没有效果的，因为，只有一行的时候它虽然是第一行，但是它也是最后一行。
+所以只有一行的时候，justify是没有效果的，因为，只有一行的时候它虽然是第一行，但是它也是最后一行。
 
 那么如果想设置最后一行怎么办呢？
 
 ```css
-text-align-last: justiry;
+text-align-last: justify;
 ```
 
 通过这个就可以设置**最后一行的文字**
@@ -154,7 +154,7 @@ text-align-last: justiry;
 ```css
 .box{
     color: red;
-    text-decoration: line-throgth;
+    text-decoration: line-through;
 }
 ```
 
@@ -170,7 +170,7 @@ text-align-last: justiry;
 
 `word-spacing: 8px;`
 
-![image-20231121223348039](assets/8.文本属性/image-20231121223348039.png)
+![image-20231121223348039](assets/8.文本属性.assets/image-20231121223348039.png)
 
 
 
@@ -425,7 +425,7 @@ font-size: 24px;
 3. 那么一行文本的高度就是40px；
 4. 40px - 24px = 16px
 5. 16px是一行的高度减掉文本的高度，剩下的高度会分成两份，放在文本的上方和下方
-6. 16px % 2 = 8px
+6. 16px / 2 = 8px
 7. 每一部分是8px
 8. 这样文本就居中了，也是line-height能让文本居中的原理
 9. 这样只能让文本进行居中，因为其他类型的元素不具备这样的特性
