--- a/4.认识元素.md
+++ b/4.认识元素.md
@@ -469,7 +469,7 @@ HTML5新增元素（后续学习）
 我们应该如何告诉浏览器来显示一张图片呢？使用**img元素**。
 
 > HTML <img> 元素将一份图像嵌入文档。
-> img是image单词的所以，是图像、图像的意思；
+> img是image单词的缩写，是图像、图像的意思；
 > 事实上img是一个**可替换元素（ replaced element ）**；
 
 
