修改部分错误

--- a/10.css、元素的特性.md
+++ b/10.css、元素的特性.md
@@ -152,7 +152,7 @@ HTML的制定者会想，每个元素占据多大的空间？
 水平方向：
 
 - 块级元素
-  - 由内容决定，如果继续从左网友跟着排列其他元素，有些不合理
+  - 由内容决定，如果继续从左往右跟着排列其他元素，有些不合理
   - 因为如果这个元素是h1作为标题，它非常重要
   - 这个时候，这个标题必须独占一行的（参考报纸的标题）
   - 所以HTML的制定者考虑到这个以后，定义了一类元素为块级元素(block level)
@@ -292,7 +292,7 @@ inline-block元素:
   - **对外来说，它是一个行内级元素 （可以和其他元素在同一行）**
   - **对内来说，它是一个块级元素（可以设置自己的宽高）**
 
-inline: 
+inline:  
 
 - 跟其他行内级元素在**同一行显示**; 
 - **不可以随意设置宽高;** 
@@ -458,7 +458,7 @@ overflow用于控制内容溢出时的行为
 
 
 
-
+ 
 
 
 
