--- a/17.定位.md
+++ b/17.定位.md
@@ -498,6 +498,12 @@ sticky是相对于最近的滚动祖先包含视口的(the nearest ancestor scro
 
 
 
+> 定位中top是支持动画的，如何查看是否支持动画可以查看mdn
+>
+> ![image-20231207205030494](assets/17.定位/image-20231207205030494.png)
+>
+> 这里写了支持动画，如果不支持动画会直接写一个no
+
 
 
 
