--- a/11.CSS盒子模型.md
+++ b/11.CSS盒子模型.md
@@ -90,8 +90,8 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 
 设置内容是通过**宽度**和**高度**设置的: 
 
-- 宽度设置: **width** 
-- 高度设置: **height**
+- 宽度设置: **width**  
+- 高度设置: **height** 
 
 注意: 对于**行内级非替换元素**来说, 设置宽高是**无效的**!
 
@@ -122,6 +122,7 @@ HTML中的每一个元素都可以看做是**一个盒子**，如右下图所示
 - width: auto
 - 但是它的宽度是自己的内容的宽度
 - 也就是说**不会和块级元素一样独占一行**
+- 在mdn中，介绍为和inline-block类似
 
 
 
@@ -286,13 +287,13 @@ border-radius事实上**是一个缩写属性**:
 上下角的圆角是：
 
 ```txt
-200 * 10% = 20px
+210 * 10% = 21px
 ```
 
 左右角的圆角是
 
 ```txt
-100 * 10% = 10px
+110 * 10% = 11px
 ```
 
 这个的时候的盒子的四个角可能有些怪异...
@@ -340,6 +341,8 @@ margin也并非必须是四个值, 也可以有其他值;
 ![image-20231118125735114](assets/11.CSS盒子模型.assets/image-20231118125735114.png)
 
  
+
+> 如果用margin进行移动的时候，对方不是定位或者浮动元素，他是可以盖在移动位置元素的上方的
 
 
 
@@ -704,8 +707,14 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 ![image-20231122231224586](assets/11.CSS盒子模型.assets/image-20231122231224586.png)
 
 - 可以发现给行内级非替换元素设置了padding，但是显示是异常的
+
 - 这里主要异常的是padding-top、padding-bottom，
+
 - 它们都不占空间，因为bbb是块级元素，它跑到了padding中就证明了这部分没有占空间，让bbb跑上去了
+
+- 注意，虽然padding不占位置，但是如果padding外面有border的话，还是会把border撑开，当然，就算border存在，上方和下方也依然是不占位置的，只有左右占位置
+
+  <img src="assets/11.CSS盒子模型/image-20231207132826446.png" alt="image-20231207132826446" style="zoom:50%;" />
 
 
 
