新增动画和vertical-align

--- a/11.CSS盒子模型.md
+++ b/11.CSS盒子模型.md
@@ -532,7 +532,7 @@ margin-top传递
 
 
 
-
+> TIP: margin可以使用百分比，但是百分比的参考对象是**包含块的宽**！
 
 
 
@@ -553,6 +553,7 @@ outline相关属性有
 应用实例 
 
 - 去除a元素、input元素的focus轮廓效果
+- outline不占空间，所以元素会跑到border那里
 
 <img src="assets/11.CSS盒子模型.assets/image-20231122220526911.png" alt="image-20231122220526911" style="zoom: 50%;" />
 
@@ -561,6 +562,10 @@ outline相关属性有
 
 
 > 行内级元素设置margin-top和margin-bottom无效
+>
+> 行内级元素设置padding-top和padding-bottom异常
+>
+> 行内级元素设置border-top和border-bottom异常
 
 
 
@@ -754,7 +759,7 @@ text-shadow用法类似于box-shadow，用于**给文字添加阴影效果**
 >       }
 > ```
 >
-> ![image-20231204214230163](assets/11.CSS盒子模型.assets/image-20231204214230163.png)
+> <img src="assets/11.CSS盒子模型.assets/image-20231204214230163.png" alt="image-20231204214230163" style="zoom:50%;" />
 >
 > 背景色会在border没有设置颜色的情况下，会使用color设置的颜色
 >
