--- a/13.列表、表格、表单.md
+++ b/13.列表、表格、表单.md
@@ -372,7 +372,7 @@ type类型的其他取值和input的其他属性, 查看文档:
 >
 > w3c说它是可替换元素，但是又标注了它是非可替换元素
 >
-> 所以很难说它是可替换还是不可替换
+> 所以很难说它是可替换还是不可替换 
 >
 > input是否是可替换元素，应该是根据它的type的值来确定的
 >
@@ -504,7 +504,7 @@ form常见的属性如下:
 - target
   - 在什么地方打开URL（参考a元素的target）
 
-
+![image-20231209210819284](assets/13.列表、表格、表单/image-20231209210819284.png)
 
 
 
