--- a/8.文本属性.md
+++ b/8.文本属性.md
@@ -60,7 +60,7 @@ text-indent: 2em; 刚好是缩进2个文字
 
 ![image-20231113082732707](assets/8.文本属性.assets/image-20231113082732707.png)
 
-
+>  对行内级非替换元素无效
 
 
 
@@ -433,6 +433,20 @@ font-size: 24px;
 9. 这样只能让文本进行居中，因为其他类型的元素不具备这样的特性
 
 
+
+> line-height不能把行内非替换元素的高度撑起来
+>
+> ![image-20231210205735379](assets/8.文本属性/image-20231210205735379.png)
+
+
+
+> line-height能让块级元素或者inline-block级元素的高度撑起来
+>
+> ![image-20231210210246210](assets/8.文本属性/image-20231210210246210.png)
+>
+> 
+>
+> 注意，如果block元素中没有内容，那么line-height继承过来不生效
 
 
 
