--- a/12.CSS设置背景.md
+++ b/12.CSS设置背景.md
@@ -141,3 +141,18 @@ background是一系列背景相关属性的简写属性
 - img，作为网页内容的重要组成部分，比如广告图片、LOGO图片、文章配图、产品图片 
 - background-image，可有可无。有，能让网页更加美观。无，也不影响用户获取完整的网页内容信息
 
+
+
+
+
+## 图片居中
+
+```css
+    .box {
+      background-color: #f00;
+      height: 489px;
+      background-image: url(./imgs/mhxy.jpg);
+      background-position: center 0;  // 水平、垂直
+    }
+```
+
