--- a/20.形变.md
+++ b/20.形变.md
@@ -464,3 +464,22 @@ CSS animation 属性是 animation-name，animation-duration, animation-timing-fu
 - animation-play-state：指定动画运行或者暂停（在JavaScript中使用，用于暂停动画）
   - paused:暂停动画
 
+```css
+      /* box要执行moveAnim的动画 */
+      animation-name: moveAnim;
+      animation-duration: 3s;
+      animation-timing-function: ease-in-out;
+
+      /* 其他属性: */
+      /* 动画执行的次数 */
+      /* animation-delay: 2s; */
+      /* animation-iteration-count: 2; */
+      /* animation-direction: reverse; */
+      /* 元素停留在动画的哪一个位置 */
+      /* animation-fill-mode: forwards; */
+
+      /* js动态修改 */
+      /* animation-play-state: paused; */
+      animation: moveAnim 3s linear 1s 2 normal forwards, ;
+```
+
