--- a/8.文本属性.md
+++ b/8.文本属性.md
@@ -469,7 +469,11 @@ font-size: 24px;
 
 
 
+##     writing-mode
 
+**`writing-mode`** 属性定义了文本水平或垂直排布以及在块级元素中文本的行进方向。为整个文档设置该属性时，应在根元素上设置它（对于 HTML 文档，应该在 `html` 元素上设置）
+
+![image-20240103234506598](assets/8.文本属性/image-20240103234506598.png)
 
 
 
